# v8jsc

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/fq/v8jsc_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/fq/v8jsc_app/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/fq/v8jsc_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
v8jsc/: CMakeLists.txt  build.gradle  proguard-rules.pro
v8jsc/src/androidTest/java/fq/v8jsc/: ExampleInstrumentedTest.java
v8jsc/src/main/: AndroidManifest.xml
v8jsc/src/main/cpp/: Config.h  JavaMethodInfo.h  JniHelper.cpp  JniHelper.h  V8Context.cpp  V8Context.hpp  V8Library.cpp  V8ScriptEngine.cpp  V8ScriptEngine.hpp
v8jsc/src/main/cpp/include/: v8.h
v8jsc/src/main/res/values/: strings.xml
v8jsc/src/test/java/fq/v8jsc/: ExampleUnitTest.java
